// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render if there are no announcements 1`] = `null`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUCMENTS mutation when the user clicks the modals action button | GO action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "padding": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 32,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "color": "#B4B6BA",
                        "justifyContent": "flex-end",
                        "margin": 0,
                        "position": "absolute",
                        "right": -5,
                        "top": -40,
                      },
                    ],
                  ],
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 30,
            "textAlign": "center",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AnnouncementActionButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "fontSize": 14,
                "height": 48,
                "letterSpacing": 1.5,
                "lineHeight": 24,
                "width": 600,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            GO TO GOOGLE
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUCMENTS mutation when the user clicks the modals action button | GO and Track action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "padding": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 32,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "color": "#B4B6BA",
                        "justifyContent": "flex-end",
                        "margin": 0,
                        "position": "absolute",
                        "right": -5,
                        "top": -40,
                      },
                    ],
                  ],
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 30,
            "textAlign": "center",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AnnouncementActionButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "fontSize": 14,
                "height": 48,
                "letterSpacing": 1.5,
                "lineHeight": 24,
                "width": 600,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            GO TO GOOGLE
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUCMENTS mutation when the user clicks the modals action button | Track action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "padding": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 32,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "color": "#B4B6BA",
                        "justifyContent": "flex-end",
                        "margin": 0,
                        "position": "absolute",
                        "right": -5,
                        "top": -40,
                      },
                    ],
                  ],
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 30,
            "textAlign": "center",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AnnouncementActionButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "fontSize": 14,
                "height": 48,
                "letterSpacing": 1.5,
                "lineHeight": 24,
                "width": 600,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            TRACK THIS ACTION
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`User clicks the Modal Action Button Should fire the HANDLE_ANNOUNCEMENT mutation with no action 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "flex": 0.4,
          "justifyContent": "space-around",
          "padding": 14,
          "paddingVertical": 40,
          "width": "80%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 32,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "color": "#B4B6BA",
                        "justifyContent": "flex-end",
                        "margin": 0,
                        "position": "absolute",
                        "right": -5,
                        "top": -40,
                      },
                    ],
                  ],
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 30,
            "textAlign": "center",
          }
        }
      >
        Another Test 17
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          }
        }
      >
        This is  a test for the new modal
      </Text>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AnnouncementNoActionButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "fontSize": 14,
                "height": 48,
                "letterSpacing": 1.5,
                "lineHeight": 24,
                "width": 600,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            Done
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
